--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet"><link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+
+
   <link rel="stylesheet" href="./style.css">
   <title>404NotFound</title>
 </head>
@@ -23,5 +27,6 @@
       <button class="body_info_button">BACK TO HOMEPAGE</button>
     </div>
   </section>
+  <footer class="footer">created by RaunakGN2001 - devChallenges.io</footer>
 </body>
 </html>
